--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,5 +13,5 @@
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
-    "background_color": "fff"
+    "background_color": "#fff"
 }
